[build-system]
requires = ["scikit-build-core>=0.8.0", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pydyn"
version = "0.1.0"
requires-python = ">=3.8"
description = "Python dynamics with CUDA neighbor search"
readme = "README.md"


dependencies = [
    "ase>=3.22.1",
    "cupy",        
    "torch",     
]


[tool.scikit-build]
# Where Python packages live
packages = ["pydyn"]
package-dir = { "" = "." }

# Build options
wheel.install-dir = "pydyn/neighbors"
cmake.source-dir = "pydyn/neighbors"
