[build-system]
requires = ["setuptools>=61.0", "wheel", "cmake"]
build-backend = "setuptools.build_meta"

[project]
name = "pydyn"
version = "0.1.0"
requires-python = ">=3.8"
description = "Python dynamics with CUDA neighbor search"
readme = "README.md"


dependencies = [
    "ase",
    "cupy",        
    "torch",     
]


[tool.scikit-build]
build-dir = "build"
cmake = true

[tool.setuptools]
package-dir = {"" = "pydyn"}

[tool.setuptools.packages.find]
where = ["pydyn"]
