[build-system]
requires = ["setuptools>=61.0", "wheel", "cmake"]
build-backend = "setuptools.build_meta"

[project]
name = "pydyn"
version = "0.1.0"
requires-python = ">=3.8"
description = "GPU-accelerated molecular dynamics simulation with CUDA neighbor search"
readme = "README.md"

dependencies = [
    "ase>=3.20",
    "cupy>=11.0",
    "torch>=1.9",
    "scipy>=1.5",
]

[tool.setuptools]
packages = ["pydyn"]
